--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "previewipad",
+  "name": "h5-cli-template",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.4.4",
+    "postcss-plugin-px2rem": "^0.8.1",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3"
   },
